.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Application_V2__c/fields/Application_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Completion_Date__c</fullName>
    <description>Last date this application was moved to &quot;Active&quot;.</description>
    <inlineHelpText>Last date this application was moved to &quot;Active&quot;.</inlineHelpText>
    <label>Application Completion Date</label>
    <summarizedField>TR1__Application_History__c.TR1__Stage_Start_Date__c</summarizedField>
    <summaryFilterItems>
        <field>TR1__Application_History__c.TR1__NewStage__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>TR1__Application_History__c.TR1__Application__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>