.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Application_V2__c/fields/Application_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Application_Duration_Days__c</fullName>
    <description>Number of days since the application was created.</description>
    <formula>IF(TR1__Reject__c = TRUE,(DATEVALUE(Application_Rejection_Date__c)-DATEVALUE(CreatedDate)),
   IF(ISNULL(Application_Completion_Date__c),(Today()-DATEVALUE(CreatedDate)),(DATEVALUE(Application_Completion_Date__c)-DATEVALUE(CreatedDate))
   )
)</formula>
    <inlineHelpText>Number of days since the application was created.</inlineHelpText>
    <label>Application Duration (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>