.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Application_V2__c/fields/Application_Notes__c.field-meta.xml
<CustomField>
    <fullName>Application_Notes__c</fullName>
    <label>Application Notes</label>
    <type>TextArea</type>
</CustomField>