.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Application_V2__c/fields/Application_Priority_Internal__c.field-meta.xml
<CustomField>
    <fullName>Application_Priority_Internal__c</fullName>
    <description>Priority of this application for internal prioritisation purposes in recruitment teams.</description>
    <inlineHelpText>Priority of this application for internal prioritisation purposes in recruitment teams.</inlineHelpText>
    <label>Application Priority (Internal)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>