.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Application_V2__c/fields/Application_Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Rejection_Date__c</fullName>
    <description>Last date this application got rejected.</description>
    <inlineHelpText>Last date this application got rejected.</inlineHelpText>
    <label>Application Rejection Date</label>
    <summarizedField>TR1__Application_History__c.CreatedDate</summarizedField>
    <summaryFilterItems>
        <field>TR1__Application_History__c.Name</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>TR1__Application_History__c.TR1__Application__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>