.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Application_V2__c/fields/Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date__c</fullName>
    <inlineHelpText>Preferred Arrival Date?</inlineHelpText>
    <label>Arrival Date</label>
    <type>TextArea</type>
</CustomField>