.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Application_V2__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <inlineHelpText>Preferred Departure Date</inlineHelpText>
    <label>Departure Date</label>
    <type>TextArea</type>
</CustomField>