.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Application_V2__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <description>Internal notes for each application record.
Character limit: 255.</description>
    <inlineHelpText>Internal notes for each application record.
Character limit: 255.</inlineHelpText>
    <label>Internal Notes</label>
    <type>TextArea</type>
</CustomField>