.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Application_V2__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <formula>TR1__Job__r.Name</formula>
    <label>Job Name</label>
    <type>Text</type>
</CustomField>