.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Application_V2__c/fields/record_type_name_c__c.field-meta.xml
<CustomField>
    <fullName>record_type_name_c__c</fullName>
    <formula>RecordType.Name</formula>
    <label>record type.name</label>
    <type>Text</type>
</CustomField>