.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Application_V2__c/fields/Require_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Require_Accommodation__c</fullName>
    <inlineHelpText>Do you require accommodation for the duration of your placement? Y/N</inlineHelpText>
    <label>Require Accommodation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>