.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Application_V2__c/fields/Return_Travel__c.field-meta.xml
<CustomField>
    <fullName>Return_Travel__c</fullName>
    <inlineHelpText>Return Travel - returning to?</inlineHelpText>
    <label>Return Travel</label>
    <type>TextArea</type>
</CustomField>