.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Application_V2__c/fields/Travel_with_Company__c.field-meta.xml
<CustomField>
    <fullName>Travel_with_Company__c</fullName>
    <inlineHelpText>[If With company] Who will you be travelling with?</inlineHelpText>
    <label>Travel with Company</label>
    <type>TextArea</type>
</CustomField>