.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Application_V2__c/recordTypes/Contract.recordType-meta.xml
<RecordType>
    <fullName>Contract</fullName>
    <active>true</active>
    <description>Related to Job Contract Record Type</description>
    <label>Contract</label>
</RecordType>