.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Application_V2__c/recordTypes/Shift_Work.recordType-meta.xml
<RecordType>
    <fullName>Shift_Work</fullName>
    <active>false</active>
    <label>Shift Work</label>
</RecordType>