.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Application_V2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TR1__Applicant__c</columns>
    <columns>TR1__Email__c</columns>
    <columns>TR1__Mobile__c</columns>
    <columns>TR1__Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TR1__Source__c</columns>
    <columns>TR1__Source_Job__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>